<resources>
    <string name="app_name">My Sudoku</string>
    <string name="edit_message">Enter a message</string>

    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>

    <string name="button_generate">Generate</string>
    <string name="button_reset">Reset</string>
    <string name="button_hint">Hint</string>
    <string name="button_check">Check</string>
    <string name="button_quit">Quit</string>
    <string name="button_new_game">New Game</string>

    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_yes_button">Yes</string>
    <string name="solver_generate_error">Error generating sudoku.</string>
    <string name="quit_dialog_title">Exiting the Application</string>
    <string name="quit_dialog_message">Are you sure you want to quit?</string>
    <string name="reset_dialog_title">Reset</string>
    <string name="reset_dialog_message">Are you sure you want to reset the game?</string>
    <string name="won_dialog_message">You solved the Sudoku!</string>
    <string name="won_dialog_title">Congratulations</string>
    <string name="dialog_ok_button">Ok</string>
    <string name="dialog_generate_button">Generate New Sudoku</string>
    <string name="dialog_generate_title">Select Your Sudoku to Generate</string>
    <string name="generate_dialog_preference">generate_dialog_preference</string>
    <string name="radio_dimensions_three_text">3x3 - 81 Squares</string>
    <string name="radio_dimensions_four_text">4x4 - 256 Squares</string>
    <string name="radio_diff_beginner_text">Beginner</string>
    <string name="radio_diff_casual_text">Casual</string>
    <string name="radio_diff_challenge_text">Challenge</string>
</resources>
