<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context="adam.javasudoku.SudokuGameActivity"

  android:id="@+id/content"
  tools:showIn="@layout/activity_sudoku_game"
  android:background="#e6ff56">

  <TextView
    android:id="@+id/game_status_panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minLines="3"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:layout_gravity="center_horizontal"
    android:enabled="false"
    android:gravity="center"
    android:background="@drawable/border"
    android:textStyle="bold"
    android:typeface="serif"/>

  <android.support.v7.widget.GridLayout
    android:id="@+id/game_grid_layout"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="5dp"/>

  <LinearLayout
    android:orientation="horizontal"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:gravity="center_horizontal">


    <Button
      android:id="@+id/game_generate_button"
      android:layout_height="wrap_content"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:text="@string/button_generate"/>

    <Button
      android:id="@+id/game_reset_button"
      android:layout_height="wrap_content"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:text="@string/button_reset"/>

    <Button
      android:id="@+id/game_hint_button"
      android:layout_height="wrap_content"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:text="@string/button_hint"/>

    <Button
      android:id="@+id/game_check_button"
      android:layout_height="wrap_content"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:text="@string/button_check"/>
  </LinearLayout>

</LinearLayout>
